<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyLifeAssistant</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="weather">天气查询</string>
    <string name="about">关于</string>
    <string name="notebook">记事本</string>
    <string name="contents">通讯录</string>
    <string name="jisuanqi">计算器</string>
    <string name="calender">日历</string>
    <string name="search">快递查询</string>
    <string name="right">确定</string>
    <string name="evevtmanger">事件管理</string>
    <string name="all">全部</string>
    <string name="newnote">新建记事</string>
    <string name="clear">C</string>
    <string name="delete">DEL</string>
    <!-- 星期 -->
    <string name="Mon">一</string>
    <string name="Tue">二</string>
    <string name="Wed">三</string>
    <string name="Thu">四</string>
    <string name="Fri">五</string>
    <string name="Sat">六</string>
    <string name="Sun">日</string>

    <string-array name="company_code">
        <item>yuantong</item>
        <item>shentong</item>
        <item>shunfeng</item>
        <item>yunda</item>
        <item>zhongtong</item>
        <item>ems</item>
        <item>zhaijisong</item>
    </string-array>
    <string-array name="company_name">
        <item>圆通速递</item>
        <item>申通快递</item>
        <item>顺丰快递</item>
        <item>韵达快运</item>
        <item>中通速递</item>
        <item>EMS</item>
        <item>宅急送</item>
    </string-array>

</resources>