<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/Linerout_one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/weather_View"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/weather"
                android:drawableTop="@drawable/homepage_logo_weather"
                android:text="@string/weather" />

            <Button
                android:id="@+id/notebook_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/notebook"
                android:drawableTop="@drawable/homepage_logo_notebook"
                android:text="@string/notebook" />

            <Button
                android:id="@+id/search_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/search"
                android:drawableTop="@drawable/homepage_logo_search"
                android:text="@string/search" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearout_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/contents_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/contents"
                android:drawableTop="@drawable/homepage_logo_contents"
                android:text="@string/contents" />

            <Button
                android:id="@+id/calculator_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/calculator"
                android:drawableTop="@drawable/homepage_logo_calculator"
                android:text="@string/jisuanqi" />

            <Button
                android:id="@+id/calender_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/calender"
                android:drawableTop="@drawable/homepage_logo_calendar"
                android:text="@string/calender" />

            <Button
                android:id="@+id/about_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/about"
                android:drawableTop="@drawable/homepage_logo_about"
                android:text="@string/about" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>